--- a/assets/styles/scss/components/select.scss
+++ b/assets/styles/scss/components/select.scss
@@ -99,7 +99,8 @@
 
         i.fa-magnifying-glass {
           position: absolute;
-          margin: 20px -40px;
+          top: 20px;
+          right: 30px;
           color: var(--grey);
           cursor: pointer;
         }
